src/objects/FieloAlpha__MemberSegment__c.object
<CustomObject>
    <fields>
        <fullName>FieloAlpha__Member2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloAlpha__Member__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>MemberSegments2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__MemberSegmentCombination__c</fullName>
        <description>This field is for internal use. It will contain the Id of the Member and the Id of the Segment concatenated. This field is unique, so you can not relate the same Member manually twice with a Segment.</description>
        <label>Member Segment Combination</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloAlpha__Segment2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloAlpha__RedemptionRule__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Manual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>MemberSegments2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Member Segment</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Member Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ProgramConsistency</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__Member2__r.FieloAlpha__Program__c  &lt;&gt;  FieloAlpha__Segment2__r.FieloAlpha__Program__c</errorConditionFormula>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
</CustomObject>